# show-struct-of-folder

./: .gitignore  Cargo.toml  README.md  install.sh  ssp.rs  win_install.ps1
.github/workflows/: ci.yml
src/: analyze.rs  cli.rs  config.rs  git.rs  icons.rs  main.rs  output.rs  render.rs  style.rs  tree.rs  walk.rs
