[package]
name = "ssp"
version = "2.0.0"
edition = "2024"
description = "SSP – Show Structure of Project: a modern, configurable tree alternative"
license = "MIT"
repository = "https://github.com/Flaykky/show-struct-of-folder"
keywords = ["tree", "directory", "cli", "filesystem"]
categories = ["command-line-utilities"]
default-run = "ssp"

[[bin]]
name = "ssp"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
ignore     = "0.4"
owo-colors = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
dirs       = "5"
